--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -5,5 +5,6 @@
     <string name="searching_mode">Wyszukiwanie</string>
     <string name="drawing_mode">Narysuj znak</string>
     <string name="puzzle_mode">Wybierz znak</string>
+    <string name="dictionary_files_not_loaded">Pliki słownika niezaładowane. Spróbuj ponownie.</string>
     <string name="word_search_hint">Wyszukaj słowo</string>
 </resources>
