--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="drawing_mode">Narysuj znak</string>
     <string name="puzzle_mode">Wybierz znak</string>
     <string name="word_search_hint">Wyszukaj słowo</string>
+    <string name="dictionary_files_not_loaded">Pliki słownika niezaładowane. Spróbuj ponownie.</string>
     <string name="result_text_placeholder_1" translatable="false">%1$s (%2$s)</string>
 </resources>
