--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -5,6 +5,7 @@
     <string name="searching_mode">Searching</string>
     <string name="drawing_mode">Draw chinese sign</string>
     <string name="puzzle_mode">Choose sign</string>
+    <string name="no_results">No results</string>
     <string name="dictionary_files_not_loaded">Dictionary files not loaded. Try again.</string>
     <string name="word_search_hint">Search word</string>
 </resources>
