--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -5,5 +5,6 @@
     <string name="searching_mode">Searching</string>
     <string name="drawing_mode">Draw chinese sign</string>
     <string name="puzzle_mode">Choose sign</string>
+    <string name="no_results">No results</string>
     <string name="word_search_hint">Search word</string>
 </resources>
