--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -6,5 +6,11 @@
     <string name="drawing_mode">Draw chinese sign</string>
     <string name="puzzle_mode">Choose sign</string>
     <string name="no_results">No results</string>
+    <string name="dictionary_files_not_loaded">Dictionary files not loaded. Try again.</string>
     <string name="word_search_hint">Search word</string>
+
+    <string name="settings">Settings</string>
+    <string name="do_not_show_again">Don\'t show again</string>
+
+    <string name="tts_dialog_message">Press the speaker. If you don\'t hear anything open settings and download data for Chinese language</string>
 </resources>
