--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -8,4 +8,9 @@
     <string name="no_results">Brak wyników wyszukiwania</string>
     <string name="dictionary_files_not_loaded">Pliki słownika niezaładowane. Spróbuj ponownie.</string>
     <string name="word_search_hint">Wyszukaj słowo</string>
+
+    <string name="settings">Ustawienia</string>
+    <string name="do_not_show_again">Nie pokazuj ponownie</string>
+
+    <string name="tts_dialog_message">Naciśnij głośnik. Jeśli nic nie słyszysz wejdź w ustawienia i pobierz dane języka chińskiego</string>
 </resources>
