--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,14 @@
     <string name="searching_mode">Wyszukiwanie</string>
     <string name="drawing_mode">Narysuj znak</string>
     <string name="puzzle_mode">Wybierz znak</string>
-    <string name="word_search_hint">Wyszukaj słowo</string>
-    <string name="dictionary_files_not_loaded">Pliki słownika niezaładowane. Spróbuj ponownie.</string>
     <string name="no_results">Brak wyników wyszukiwania</string>
+    <string name="dictionary_files_not_loaded">Pliki słownika niezaładowane. Spróbuj ponownie.</string>
+    <string name="word_search_hint">Wyszukaj słowo</string>
+
+    <string name="settings">Ustawienia</string>
+    <string name="do_not_show_again">Nie pokazuj ponownie</string>
+
+    <string name="tts_dialog_message">Naciśnij głośnik. Jeśli nic nie słyszysz wejdź w ustawienia i pobierz dane języka chińskiego</string>
 
     <string name="result_text_placeholder_1" translatable="false">%1$s (%2$s)</string>
     <string name="definition_list_item_placeholder" translatable="false">%1$d %2$s</string>
