--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -11,6 +11,8 @@
 
     <string name="settings">Settings</string>
     <string name="do_not_show_again">Don\'t show again</string>
+    <string name="definition">Definition</string>
+    <string name="strokes">Strokes</string>
 
     <string name="tts_dialog_message">Press the speaker. If you don\'t hear anything open settings and download data for Chinese language</string>
 </resources>
