--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Signaly Chiński</string>
+    <string name="app_name">Signaly Chinese</string>
 
     <string name="clear">Clear</string>
     <string name="searching_mode">搜寻</string>
@@ -44,4 +44,43 @@
     <string name="collection">"Collection: "</string>
     <string name="draw">Draw</string>
     <string name="present">Present</string>
+    <string name="writing">Writing</string>
+
+    <string-array name="menu_array">
+        <item>Search mode</item>
+        <item>Voice recognition language</item>
+        <item>Search history</item>
+        <item>Learn</item>
+        <item>About app</item>
+    </string-array>
+    <string name="draw_here">Draw here</string>
+    <string name="refresh">Refresh</string>
+    <string name="no_internet">No internet</string>
+    <string name="provide_input">Provide input</string>
+    <string name="about">About</string>
+    <string name="licences">Licenses</string>
+    <string name="version">Version</string>
+    <string name="hint">Hint</string>
+    <string name="simplified">Simplified</string>
+    <string name="traditional">Traditional</string>
+    <string name="continuee">Continue</string>
+    <string name="say_something">Say something</string>
+    <string name="delete_flashcard_group">Delete flashcard group</string>
+    <string name="word_popup">Word\'s options popup</string>
+    <string name="previous_character">Previous character</string>
+    <string name="next_character">Next character</string>
+    <string name="search_character">Search character</string>
+    <string name="reset_character">Reset character</string>
+    <string name="gesture_plain">Gesture plain</string>
+    <string name="next_flashcard">Next flashcard</string>
+    <string name="close">Close</string>
+    <string name="speak_chinese">Speak Chinese</string>
+    <string name="speak_polish">Speak Chinese</string>
+    <string name="add_collection">Add collection</string>
+    <string name="new_collection_confirm">Confirm new collection</string>
+    <string name="mic">Speak with microphone</string>
+    <string name="vector_master">Vector Master</string>
+    <string name="add">Add</string>
+    <string name="delete">Delete</string>
+    <string name="reverse">Reverse</string>
 </resources>
